--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,3 +14,4 @@ bind-key -T copy-mode-vi y send -X copy-selection\; run "tmux save -|xclip -sel 
 #bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 #bind-key -T copy-mode-vi 'y' send -X copy-pipe 'xclip -sel clip'
 #list-keys -T copy-mode-vi 
+bind-key e set-window-option synchronize-panes
