--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,7 @@ bind-key -T copy-mode-vi y send -X copy-selection\; run "tmux save -|xclip -sel 
 #bind-key -T copy-mode-vi y send -X copy-selection-and-cancel\; run "tmux save -|xclip -sel clip >/dev/null 2>&1"
 #bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 #bind-key -T copy-mode-vi 'y' send -X copy-pipe 'xclip -sel clip'
-#list-keys -T copy-mode-vi
+#list-keys -T copy-mode-vi 
 bind-key e set-window-option synchronize-panes
 bind-key k respawn-pane -k
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
@@ -21,6 +21,7 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 #bind-key s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
 bind-key t split-window -h "vim ~/.tmux.conf"
 bind -n C-j run-shell -b "tmux list-panes |fzf-tmux -r 20% --multi --reverse|cut -c 1|xargs tmux select-pane -t"
+bind-key j command-prompt -I 'selectp -T '
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
