--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,13 +19,14 @@ bind-key k respawn-pane -k
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 #bind-key h split-window -h "top"
 #bind-key s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
-bind-key t split-window -h "vim ~/.tmux.conf"
+bind-key t run-shell -b "mfaCodeGen list-options |fzf-tmux -r 20% --multi --reverse| mfaCodeGen >/dev/null 2>&1"
+bind-key s run-shell -b "sshExecutor list-options |fzf-tmux -r 20% --multi --reverse| sshExecutor >/dev/null 2>&1"
 bind -n C-j run-shell -b "tmux list-panes |fzf-tmux -r 20% --multi --reverse|cut -c 1|xargs tmux select-pane -t"
 bind-key j command-prompt -I 'selectp -T '
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'sainnhe/tmux-fzf'
-TMUX_FZF_LAUNCH_KEY="C-f"
-TMUX_FZF_ORDER="clipboard|session|window|pane|command|keybinding"
-run '~/.tmux/plugins/tpm/tpm'
+#set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'sainnhe/tmux-fzf'
+#TMUX_FZF_LAUNCH_KEY="C-f"
+#TMUX_FZF_ORDER="clipboard|session|window|pane|command|keybinding"
+#run '~/.tmux/plugins/tpm/tpm'
