some addition to status bar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,6 +26,7 @@ bind-key t run-shell -b "~/dotfiles/generalscripts/mfaCodeGen list-options |fzf-
 bind-key s run-shell -b "~/dotfiles/generalscripts/sshExecutor list-options |fzf-tmux -r 20% --multi --reverse| ~/dotfiles/generalscripts/sshExecutor >/dev/null 2>&1"
 # Interative pane selection
 bind -n C-j run-shell -b "tmux list-panes |fzf-tmux -r 20% --multi --reverse|cut -c 1|xargs tmux select-pane -t"
+# Status bar
 run-shell ~/dotfiles/tmux/scripts/tmuxstatusbar.sh
 
 set -g @plugin 'tmux-plugins/tpm'
