StatusBar changes and sendPaste for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,18 +12,36 @@ set -g set-clipboard off
 # vi mode with copy paste
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi y send -X copy-selection\; run "tmux save -|xclip -sel clip >/dev/null 2>&1"
+bind-key -T copy-mode-vi y send -X copy-pipe "copyq copy -"
+#bind-key -T copy-mode-vi y send -X copy-selection\; run "tmux save -|xclip -sel clip >/dev/null 2>&1"
 
 bind-key e set-window-option synchronize-panes
 bind-key k respawn-pane -k
 bind-key j command-prompt -I 'selectp -T '
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+# Open ~/.tmux.conf in vim and reload settings on quit
+bind a new-window -n '~/.tmux.conf' "sh -c 'vim ~/.tmux.conf && tmux source ~/.tmux.conf'"
+# Use m to toggle mouse mode
+bind m setw mouse
+
 #bind-key h split-window -h "top"
 
+# Use shift + arrow key to move between windows in a session
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
+# Switch betewen panes using alt + arrow
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
 # Multi Factor Code Gen
-bind-key t run-shell -b "~/dotfiles/generalscripts/mfaCodeGen list-options |fzf-tmux -r 20% --multi --reverse| ~/dotfiles/generalscripts/mfaCodeGen >/dev/null 2>&1"
+bind-key t run-shell -b "~/dotfiles/generalscripts/mfaCodeGen list-options |fzf-tmux -r 20% --multi --reverse| ~/dotfiles/generalscripts/mfaCodeGen >/dev/null 2>&1" \;\
+    set-hook -t '::.!' pane-exited 'run-shell -b "~/dotfiles/tmux/scripts/sendPaste.sh >/dev/null 2>&1" ;set-hook -u pane-exited'
 # SSH command copy for various remotes
-bind-key s run-shell -b "~/dotfiles/generalscripts/sshExecutor list-options |fzf-tmux -r 20% --multi --reverse| ~/dotfiles/generalscripts/sshExecutor >/dev/null 2>&1"
+bind-key s run-shell -b "~/dotfiles/generalscripts/sshExecutor list-options |fzf-tmux -r 20% --multi --reverse| ~/dotfiles/generalscripts/sshExecutor >/dev/null 2>&1" \;\
+    set-hook -t '::.!' pane-exited 'run-shell -b "~/dotfiles/tmux/scripts/sendPaste.sh >/dev/null 2>&1" ;set-hook -u pane-exited'
 # Interative pane selection
 bind -n C-j run-shell -b "tmux list-panes |fzf-tmux -r 20% --multi --reverse|cut -c 1|xargs tmux select-pane -t"
 # Status bar
