Interactive Utils simplification for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -37,11 +37,13 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 # Multi Factor Code Gen
-bind-key t run-shell -b "~/dotfiles/generalscripts/mfaCodeGen list-options |fzf-tmux -r 20% --multi --reverse| ~/dotfiles/generalscripts/mfaCodeGen >/dev/null 2>&1" \;\
-    set-hook -t '::.!' pane-exited 'run-shell -b "~/dotfiles/tmux/scripts/sendPaste.sh >/dev/null 2>&1" ;set-hook -u pane-exited'
+bind-key t run-shell -b "~/dotfiles/tmux/scripts/interactiveUtils.sh ~/dotfiles/generalscripts/mfaCodeGen >/dev/null 2>&1"
+#bind-key t run-shell -b "~/dotfiles/generalscripts/mfaCodeGen list-options |fzf-tmux -r 20% --multi --reverse| ~/dotfiles/generalscripts/mfaCodeGen >/dev/null 2>&1" \;\
+#    set-hook -t '::.!' pane-exited 'run-shell -b "~/dotfiles/tmux/scripts/sendPaste.sh >/dev/null 2>&1" ;set-hook -u pane-exited'
 # SSH command copy for various remotes
-bind-key s run-shell -b "~/dotfiles/generalscripts/sshExecutor list-options |fzf-tmux -r 20% --multi --reverse| ~/dotfiles/generalscripts/sshExecutor >/dev/null 2>&1" \;\
-    set-hook -t '::.!' pane-exited 'run-shell -b "~/dotfiles/tmux/scripts/sendPaste.sh >/dev/null 2>&1" ;set-hook -u pane-exited'
+bind-key s run-shell -b "~/dotfiles/tmux/scripts/interactiveUtils.sh ~/dotfiles/generalscripts/sshExecutor >/dev/null 2>&1"
+#bind-key s run-shell -b "~/dotfiles/generalscripts/sshExecutor list-options |fzf-tmux -r 20% --multi --reverse| ~/dotfiles/generalscripts/sshExecutor >/dev/null 2>&1" \;\
+#    set-hook -t '::.!' pane-exited 'run-shell -b "~/dotfiles/tmux/scripts/sendPaste.sh >/dev/null 2>&1" ;set-hook -u pane-exited'
 # Interative pane selection
 bind -n C-j run-shell -b "tmux list-panes |fzf-tmux -r 20% --multi --reverse|cut -c 1|xargs tmux select-pane -t"
 # Status bar
