--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -47,7 +47,7 @@ bind-key s run-shell -b "~/dotfiles/tmux/scripts/interactiveUtils.sh ~/dotfiles/
 # Interative pane selection
 bind -n C-j run-shell -b "tmux list-panes |fzf-tmux -r 20% --multi --reverse|cut -c 1|xargs tmux select-pane -t"
 # Status bar
-run-shell ~/dotfiles/tmux/scripts/tmuxstatusbar.sh
+run-shell "~/dotfiles/tmux/scripts/tmuxstatusbar.sh"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
