--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,12 +29,14 @@ bind m setw mouse
 # Use shift + arrow key to move between windows in a session
 bind -n S-Left  previous-window
 bind -n S-Right next-window
+bind-key S-Left swap-window -t -1
+bind-key S-Right swap-window -t +1
 
 # Switch betewen panes using alt + arrow
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind -n C-Left select-pane -L
+bind -n C-Right select-pane -R
+bind -n C-Up select-pane -U
+bind -n C-Down select-pane -D
 
 # Multi Factor Code Gen
 bind-key t run-shell -b "~/dotfiles/tmux/scripts/interactiveUtils.sh ~/dotfiles/generalscripts/mfaCodeGen >/dev/null 2>&1"
