tmux display panes title & vim conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,6 +18,7 @@ bind-key -T copy-mode-vi y send -X copy-pipe "copyq copy -"
 bind-key e set-window-option synchronize-panes
 bind-key k respawn-pane -k
 bind-key j command-prompt -I 'selectp -T '
+bind-key C-q display-panes-title -bN -d 15000
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 # Open ~/.tmux.conf in vim and reload settings on quit
 bind a new-window -n '~/.tmux.conf' "sh -c 'vim ~/.tmux.conf && tmux source ~/.tmux.conf'"
@@ -48,6 +49,7 @@ bind-key s run-shell -b "~/dotfiles/tmux/scripts/interactiveUtils.sh ~/dotfiles/
 #    set-hook -t '::.!' pane-exited 'run-shell -b "~/dotfiles/tmux/scripts/sendPaste.sh >/dev/null 2>&1" ;set-hook -u pane-exited'
 # Interative pane selection
 bind -n C-j run-shell -b "tmux list-panes |fzf-tmux -r 20% --multi --reverse|cut -c 1|xargs tmux select-pane -t"
+# [#{pane_title}]
 # Status bar
 run-shell "~/dotfiles/tmux/scripts/tmuxstatusbar.sh"
 
