tmux listpanes, bashrc

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -48,11 +48,14 @@ bind-key s run-shell -b "~/dotfiles/tmux/scripts/interactiveUtils.sh ~/dotfiles/
 #bind-key s run-shell -b "~/dotfiles/generalscripts/sshExecutor list-options |fzf-tmux -r 20% --multi --reverse| ~/dotfiles/generalscripts/sshExecutor >/dev/null 2>&1" \;\
 #    set-hook -t '::.!' pane-exited 'run-shell -b "~/dotfiles/tmux/scripts/sendPaste.sh >/dev/null 2>&1" ;set-hook -u pane-exited'
 # Interative pane selection
-bind -n C-j run-shell -b "tmux list-panes |fzf-tmux -r 20% --multi --reverse|cut -c 1|xargs tmux select-pane -t"
+#bind -n C-j run-shell -b "tmux list-panes -F '#{pane_index}: #{pane_title} #{?pane_active, (active),}' >/dev/null 2>&1 |fzf-tmux -r 20% --multi --reverse|cut -c 1|xargs tmux select-pane -t"
+bind -n C-j run-shell -b "~/dotfiles/tmux/scripts/listPanes.sh"
 # [#{pane_title}]
 # Status bar
 run-shell "~/dotfiles/tmux/scripts/tmuxstatusbar.sh"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 run '~/.tmux/plugins/tpm/tpm'
+
