Mac tmux conf changes

--- a/tmux/mac/.tmux.conf
+++ b/tmux/mac/.tmux.conf
@@ -9,7 +9,8 @@ set -g pane-base-index 0
 set -g status-interval 5
 set -g set-clipboard off
 set-option -g default-command zsh
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
+set -s escape-time 0
 #set -g mouse on
 # vi mode with copy paste
 set-window-option -g mode-keys vi
@@ -50,7 +51,8 @@ bind-key s run-shell -b "~/dotfiles/tmux/mac/scripts/interactiveUtils.zsh ~/dotf
 #bind-key s run-shell -b "~/dotfiles/generalscripts/sshExecutor list-options |fzf-tmux -r 20% --multi --reverse| ~/dotfiles/generalscripts/sshExecutor >/dev/null 2>&1" \;\
 #    set-hook -t '::.!' pane-exited 'run-shell -b "~/dotfiles/tmux/scripts/sendPaste.sh >/dev/null 2>&1" ;set-hook -u pane-exited'
 # Interative pane selection
-bind -n C-j run-shell -b "tmux list-panes |fzf-tmux -r 20% --multi --reverse|cut -c 1|xargs tmux select-pane -t"
+#bind -n C-j run-shell -b "tmux list-panes |fzf-tmux -r 20% --multi --reverse|cut -c 1|xargs tmux select-pane -t"
+bind -n C-j run-shell -b "~/dotfiles/tmux/scripts/listPanes.sh"
 # [#{pane_title}]
 # Status bar
 run-shell "~/dotfiles/tmux/mac/scripts/tmuxstatusbar.zsh"
